GG-123 Fix node ID strategy for lookup (#99)
* Fix node ID strategy for lookup

* Simplify key methods